// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Picker Picker render visible 1`] = `
<Picker
  cancelText="取消"
  dataSource={
    Array [
      Object {
        "label": "选项一",
        "value": "1",
      },
      Object {
        "label": "选项二",
        "value": "2",
      },
    ]
  }
  itemRender={[Function]}
  okText="确定"
  prefixCls="za-picker"
  title="请选择"
  valueMember="value"
  visible={true}
>
  <div
    className="za-picker"
  >
    <Popup
      onMaskClick={[Function]}
      visible={true}
    />
  </div>
</Picker>
`;

exports[`Picker render custom label 1`] = `
<Picker
  cancelText="取消"
  dataSource={
    Array [
      Object {
        "children": Array [
          Object {
            "code": "11",
            "name": "海淀区",
          },
          Object {
            "code": "12",
            "name": "西城区",
          },
        ],
        "code": "1",
        "name": "北京市",
      },
      Object {
        "children": Array [
          Object {
            "code": "21",
            "name": "黄埔区",
          },
          Object {
            "code": "22",
            "name": "虹口区",
          },
        ],
        "code": "2",
        "name": "上海市",
      },
    ]
  }
  itemRender={[Function]}
  okText="确定"
  prefixCls="za-picker"
  title="请选择"
  valueMember="code"
>
  <div
    className="za-picker"
  >
    <Popup
      onMaskClick={[Function]}
      visible={false}
    />
  </div>
</Picker>
`;
